apps/deliverly-front/kubernetes.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: deliverly # Namespace
  labels:
    name: deliverly # Namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deliverly-front # Workload
  namespace: deliverly # Namespace
  labels:
    app: deliverly-front # Workload
spec:
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  replicas: 1
  selector:
    matchLabels:
      app: deliverly-front # Workload
  template:
    metadata:
      labels:
        app: deliverly-front # Workload
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - deliverly-front
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: deliverly-front # Workload
          image: deliverly-front # Image
          imagePullPolicy: Never
          livenessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: "200m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
          stdin: true
          tty: true
      restartPolicy: Always
      terminationGracePeriodSeconds: 120
---
apiVersion: v1
kind: Service
metadata:
  name: deliverly-front # Workload
  namespace: deliverly # Namespace
spec:
  selector:
    app: deliverly-front # Workload
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30080
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deliverly-front # Workload
  namespace: deliverly # Namespace
spec:
  ingressClassName: nginx
  rules:
    - host: deliverly.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deliverly-front # Workload
                port:
                  number: 80
